feat: add safe tiered HTTP logging